--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /**
  * Arquivo: style.css
  * Descrição: Este arquivo contém estilos CSS para um layout responsivo.
- * Autor: [Seu nome]
- * Data: [Data de criação]
+ * Autor: [ELTO BORGES]
+ * Data: [13/03/2024---23:38]
  */
+
 
 /* Define o box-sizing para border-box em todos os elementos */
 * {
